# denaro-cuda-miner

./: CMakeLists.txt  README.md  go.mod  go.sum  kernel.cu  main.cu  main.go  requests.cu  requests.cuh  requests.go  types.go
crypto/: base58.cu  base58.cuh  hex.cu  hex.cuh  sha256.cu  sha256.cuh
kernel/: kernel.cu  kernel.cuh  sha256.cuh
